--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<!--  <script type="module" src="/assets/banner-informativo/banner-informativo.esm.js"></script>-->
-<!--  <script type="module" src="/assets/tramites-consultados/tramites-consultados.esm.js"></script>-->
+  <script type="module" src="/assets/banner-informativo/banner-informativo.esm.js"></script>
+  <script type="module" src="/assets/tramites-consultados/tramites-consultados.esm.js"></script>
 </head>
 <body>
 <app-root></app-root>
